# quick_n_dirty_tracking

./: LICENSE  README.md
quick_n_dirty_tracking/: Justfile  pyproject.toml
quick_n_dirty_tracking/mesocycles/: .gitignore  mesocycle_template.yaml
quick_n_dirty_tracking/quick_n_dirty_tracking/: MesoCycleAdapter.py  models.py  utils.py
